--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,16 @@
   overflow: hidden;
   color: #fff;
 }
+
+.UpdateModal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.signout-button {
+  position: fixed;
+  top: 0;
+  right: 0;
+  margin: 20px;
+}
